--- a/Styles/services.css
+++ b/Styles/services.css
@@ -7,13 +7,15 @@ body {
 
 /* Hero Section */
 .hero {
-  background: url("../Images/our-services.jpg") no-repeat center center/cover;
+  background: url("../Images/our-services3.jpg") no-repeat center center/cover;
   height: 80vh;
   display: flex;
   justify-content: center;
   align-items: center;
   text-align: center;
-  color: white;
+  color: rgb(140, 12, 12);
+  font-family: "Stylus BT", sans-serif;
+  font-weight: 900;
   position: relative;
 }
 
